# control_almacen

./: GUIA_TERMUX.md  Makefile  PRD.md  build.spec  build_termux.sh  colors.py  deposito.xlsx  deposito_2026-07-13_0902.xlsx  main.py  pyproject.toml  rel_ubic.py  ubic.py  validation.py
openspec/changes/archive/2026-07-12-control-almacen-improvements/: design.md  tasks.md
openspec/changes/archive/2026-07-12-control-almacen-improvements/specs/bug-fixes/: spec.md
openspec/changes/archive/2026-07-12-control-almacen-improvements/specs/cross-session-uniqueness/: spec.md
openspec/changes/archive/2026-07-12-control-almacen-improvements/specs/input-validation/: spec.md
openspec/changes/archive/2026-07-12-control-almacen-improvements/specs/test-suite/: spec.md
openspec/changes/archive/2026-07-13-tui-tablet-migration/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-13-tui-tablet-migration/specs/excel-storage/: spec.md
openspec/changes/archive/2026-07-13-tui-tablet-migration/specs/termux-build/: spec.md
openspec/changes/archive/2026-07-13-tui-tablet-migration/specs/tui-urwid-interface/: spec.md
openspec/specs/traceability/: spec.md
tests/: test_rel_ubic.py  test_ubic.py  test_validation.py
tests/tui/: test_excel.py  test_states.py  test_widgets.py
tui/: app.py  excel.py  states.py  widgets.py
