[project]
name = "registro-almacen-santista"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyinstaller>=6.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]
